# Arch-install-scripts-builder

./: CMakeLists.txt  README.MD  archinstallcommands.h  main.c  stringformat.c  stringformat.h
configs/: commands.txt  packages.txt  partitions.txt  postinstall.sh  settings.txt  users.txt
